--- a/calappa/src/app/calendar/grid/grid.component.html
+++ b/calappa/src/app/calendar/grid/grid.component.html
@@ -9,9 +9,12 @@
             {{d.day}}
             <!-- <a (click)="sendMoEvtData(dayStructure.yr, dayStructure.mo, d.day)" class="badge badge-warning">+</a> -->
             <a class="badge badge-warning">+</a>
-            
+              
         </div>
         <ng-template #blankdayspan><div></div></ng-template>
+        <div *ngIf="d.todos != undefined && d.todos.length > 0" class="todoitems_outerdiv">
+                <div *ngFor="let todo of d.todos" class="todoitems_innerdiv" [ngClass]="{'todoitems_innerdiv_done' : todo.status == 'done' } "> {{todo.itemdesc}}</div>
+        </div>
     </div>  
 </div>
 
