--- a/calappa/src/app/calendar/grid/grid.component.html
+++ b/calappa/src/app/calendar/grid/grid.component.html
@@ -17,5 +17,9 @@
         </div>
     </div>  
 </div>
+<div>
+    <span class="badge badge-success">done tasks</span> | 
+    <span class="badge badge-primary">incomplete tasks</span>
+</div>
 
 
