--- a/calappa/src/app/calendar/grid/grid.component.html
+++ b/calappa/src/app/calendar/grid/grid.component.html
@@ -8,7 +8,7 @@
         <div [ngClass]="{'badge badge-primary' : currDay(d.day, dayStructure.mo, dayStructure.yr)}" *ngIf="d.day != -1; else blankdayspan"> 
             {{d.day}}
             <!-- <a (click)="sendMoEvtData(dayStructure.yr, dayStructure.mo, d.day)" class="badge badge-warning">+</a> -->
-            <a class="badge badge-warning">+</a>
+            <a class="badge badge-warning" (click)="sendMoEvtData(dayStructure.yr, dayStructure.mo, d.day)">+</a>
               
         </div>
         <ng-template #blankdayspan><div></div></ng-template>
@@ -17,9 +17,18 @@
         </div>
     </div>  
 </div>
+<div class="details_div_outer">
+    <div class="details_div_day">{{currSelectedDay}}</div>
+    <div class="details_div_items">
+        <input type="text" class="addtodoitem_input" placeholder="add todo item"> <button class="addtodoitem" title="add new todo item">+</button>
+        <div *ngFor="let item of currSelTodoItemlist"  class="todoitems_innerdiv todoitm_details" [ngClass]="{'todoitems_innerdiv_done' : item.status == 'done' } ">
+                        {{item.itemdesc}}
+        </div>
+        
+    </div>
+</div>
 <div>
     <span class="badge badge-success">done tasks</span> | 
     <span class="badge badge-primary">incomplete tasks</span>
 </div>
-
 
