--- a/calappa/src/app/calendar/dtmoyrselector/dtmoyrselector.component.html
+++ b/calappa/src/app/calendar/dtmoyrselector/dtmoyrselector.component.html
@@ -23,7 +23,7 @@
             <option value="11">nov</option>
             <option value="12">dec</option>
         </select>
-        <button type="submit" class="btn btn-primary btn-sm">load</button>
+        <button type="submit" class="butn">load</button>
 <!-- </form>
 <form [formGroup]="yrmofrm" (ngSubmit)="yrmosel()">
     <div class="row">
